--- a/index.html
+++ b/index.html
@@ -22,16 +22,32 @@
             <div class="lil-container"></div>
         </div>
 
-        <div class="white-bg">
-            <div class="big-conteiner m25">
+        <div class="white-bg-flex">
+            <div class="big-conteiner">
                 <div class="item blu"></div>
                 <div class="item pink"></div>
             </div>
-
         </div>
-        <div class="gray-bg"></div>
-        <div class="white-bg"></div>
-        <div class="gray-bg"></div>
+
+        <div class="gray-bg-flex">
+            <div class="big-conteiner">
+                <div class="item pink"></div>
+                <div class="item blu"></div>
+            </div>
+        </div>
+
+        <div class="white-bg-flex">
+            <div class="big-conteiner">
+                <div class="item blu"></div>
+                <div class="item pink"></div>
+            </div>
+        </div>
+
+        <div class="gray-bg-flex">
+            <div class="big-conteiner">
+                <div class="item green"></div>
+            </div>
+        </div>
 
 
     </main>
