--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </div>
 
-        <div class="gray-bg-flex">
+        <div class="gray-bg-flex A">
             <div class="big-conteiner">
                 <div class="item pink"></div>
                 <div class="item blu"></div>
@@ -43,12 +43,11 @@
             </div>
         </div>
 
-        <div class="gray-bg-flex">
+        <div class="gray-bg-flex B">
             <div class="big-conteiner">
                 <div class="item green"></div>
             </div>
         </div>
-
 
     </main>
 
