feat main grisgio scuro

--- a/index.html
+++ b/index.html
@@ -49,9 +49,27 @@
             </div>
         </div>
 
+        <div class="dark-grey-bg-flex B">
+            <div class="big-conteiner">
+                <div class="item coral"></div>
+                <div class="item verde-strano"></div>
+                <div class="item verde-strano"></div>
+                <div class="item verde-strano"></div>
+                <div class="item verde-strano"></div>
+            </div>
+        </div>
+
     </main>
 
-    <footer>
+    <hr>
+    <footer>     
+
+        <div class="dark-grey-bg-flex A">
+            <div class="big-conteiner">
+                <div class="item pink"></div>
+                <div class="item blu"></div>
+            </div>
+        </div>
 
     </footer>
 
