--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
     <footer>     
 
         <div class="dark-grey-bg-flex A">
-            <div class="big-conteiner">
-                <div class="item pink"></div>
-                <div class="item blu"></div>
+            <div class="big-conteiner verde-acqua">
+                <div class="item logo-bottone">Logo</div>
+                <div class="item logo-bottone">Bottone</div>
             </div>
         </div>
 
